Better creation of downoad link and handling of no attached data

--- a/src/xsl/l10n/de.xml
+++ b/src/xsl/l10n/de.xml
@@ -237,7 +237,8 @@
   
   <entry key="_disclaimer">Wir übernehmen keine Haftung für die Richtigkeit der Daten.</entry>
   <entry key="_invoice-note-group">Bemerkung zur Rechnung</entry>
-  <entry key="_open">Öffnen</entry>  
+  <entry key="_open">Öffnen</entry>
+  <entry key="no-data">Keine Daten vorhanden</entry>
   <entry key="_net">netto</entry>
   <entry key="_gross">brutto</entry>
   <entry key="_no-content">Bereiche ohne Inhalte werden nicht dargestellt!</entry>
