unify country code label

--- a/src/xsl/l10n/en.xml
+++ b/src/xsl/l10n/en.xml
@@ -130,7 +130,7 @@
   <entry key="xr:Deliver_to_post_code" id="BT-78">ZIP</entry>
   <entry key="xr:Deliver_to_city" id="BT-77">Location</entry>
   <entry key="xr:Deliver_to_country_subdivision" id="BT-79">State</entry>
-  <entry key="xr:Deliver_to_country_code" id="BT-80">Country</entry>
+  <entry key="xr:Deliver_to_country_code" id="BT-80">Country code</entry>
   <entry key="xr:Tender_or_lot_reference" id="BT-17">Award reference</entry>
   <entry key="xr:Receiving_advice_reference" id="BT-15">Receiving advice reference</entry>
   <entry key="xr:Despatch_advice_reference" id="BT-16">Despatch advice reference</entry>
