--- a/src/xsl/l10n/de.xml
+++ b/src/xsl/l10n/de.xml
@@ -231,7 +231,7 @@
   <entry key="date-format">[D].[M].[Y]</entry>
   <entry key="datetime-format">[D].[M].[Y] [H]:[m]:[s]</entry>
   <entry key="amount-format">###.##0,00</entry>
-  <entry key="percentage-format">##0,##</entry>
+  <entry key="percentage-format">##0,00</entry>
   <entry key="at-least-two-format">###.##0,#################</entry>
   
   <entry key="_disclaimer">Wir übernehmen keine Haftung für die Richtigkeit der Daten.</entry>
