--- a/src/xsl/l10n/en.xml
+++ b/src/xsl/l10n/en.xml
@@ -229,7 +229,7 @@
   <entry key="date-format">[Y]-[M,2]-[D,2]</entry>
   <entry key="datetime-format">[Y]-[M,2]-[D,2] [H]:[m]:[s]</entry>
   <entry key="amount-format">###,##0.00</entry>
-  <entry key="percentage-format">##0.##</entry>
+  <entry key="percentage-format">##0.00</entry>
   <entry key="at-least-two-format">###,##0.#################</entry>
   
   <entry key="_disclaimer">We assume no liability for the accuracy of the data.</entry>
