--- a/src/xsl/l10n/en.xml
+++ b/src/xsl/l10n/en.xml
@@ -207,7 +207,7 @@
   <entry key="uebersichtZahlungKarte" id="BG-18">Card information</entry>
   <entry key="uebersichtZahlungLastschrift" id="BG-19">Direct debit</entry>
   <entry key="uebersichtZahlungUeberweisung" id="BG-17">Transfer</entry>
-  <entry key="uebersichtBemerkungen" id="BG-1">Note on the invoice</entry>
+  <entry key="uebersichtBemerkungen" id="BG-1">Notes on the invoice</entry>
   <entry key="details">Details</entry>
   <entry key="detailsPositionAbrechnungszeitraum" id="BG-26">Billing period</entry>
   <entry key="detailsPositionPreiseinzelheiten" id="BG-29">Price details</entry>
