--- a/src/xsl/l10n/en.xml
+++ b/src/xsl/l10n/en.xml
@@ -233,7 +233,7 @@
   <entry key="at-least-two-format">###,##0.#################</entry>
   
   <entry key="_disclaimer">We assume no liability for the accuracy of the data.</entry>
-  <entry key="_invoice-note-group">Note on the invoice</entry>
+  <entry key="_invoice-note-group">Notes on the invoice</entry>
   <entry key="_open">Open</entry>
     <entry key="no-data">No data available</entry>
   <entry key="_net">net</entry>
