--- a/src/xsl/l10n/de.xml
+++ b/src/xsl/l10n/de.xml
@@ -238,6 +238,8 @@
   <entry key="percentage-format">##0,##</entry>
   <entry key="at-least-two-format">###.##0,#################</entry>
   
+  <entry key="sum-of-third-party-payment-amounts" id="BT-DEX-003_sum">Summe Fremdforderungen</entry>
+
   <entry key="_disclaimer">Wir übernehmen keine Haftung für die Richtigkeit der Daten.</entry>
   <entry key="_invoice-note-group">Bemerkungen zur Rechnung</entry>
   <entry key="_open">Öffnen</entry>
