add optional digits to amount format

--- a/src/xsl/l10n/de.xml
+++ b/src/xsl/l10n/de.xml
@@ -234,7 +234,7 @@
   <entry key="anlagenListe">Rechnungsbegründende Unterlagen</entry>
   <entry key="date-format">[D].[M].[Y]</entry>
   <entry key="datetime-format">[D].[M].[Y] [H]:[m]:[s]</entry>
-  <entry key="amount-format">###.##0,00</entry>
+  <entry key="amount-format">###.##0,00##########</entry>
   <entry key="percentage-format">##0,00</entry>
   <entry key="at-least-two-format">###.##0,#################</entry>
   
