--- a/src/xsl/l10n/de.xml
+++ b/src/xsl/l10n/de.xml
@@ -240,6 +240,7 @@
   
   <entry key="sum-of-third-party-payment-amounts">Summe Fremdforderungen</entry>
 
+  <entry key="no-script">Inhalte auf dieser Seite sind ohne JavaScript nur eingeschränkt darstellbar.</entry>
   <entry key="_disclaimer">Wir übernehmen keine Haftung für die Richtigkeit der Daten.</entry>
   <entry key="_invoice-note-group">Bemerkungen zur Rechnung</entry>
   <entry key="_open">Öffnen</entry>
