--- a/src/xsl/l10n/en.xml
+++ b/src/xsl/l10n/en.xml
@@ -238,10 +238,11 @@
   
   <entry key="sum-of-third-party-payment-amounts">Third party payment total</entry>
 
+  <entry key="no-script">The display of content on this page is limited without JavaScript.</entry>
   <entry key="_disclaimer">We assume no liability for the accuracy of the data.</entry>
   <entry key="_invoice-note-group">Notes on the invoice</entry>
   <entry key="_open">Open</entry>
-    <entry key="no-data">No data available</entry>
+  <entry key="no-data">No data available</entry>
   <entry key="_net">net</entry>
   <entry key="_gross">gross</entry>
   <entry key="_no-content">Areas without content are not displayed!</entry>
