--- a/src/xsl/l10n/de.xml
+++ b/src/xsl/l10n/de.xml
@@ -232,6 +232,7 @@
   <entry key="laufzettelHistorie">Bearbeitungshistorie</entry>
   <entry key="anlagen">Anlagen</entry>
   <entry key="anlagenListe">Rechnungsbegründende Unterlagen</entry>
+  <entry key="artikelklassifizierung">Artikelklassifizierung</entry>
   <entry key="date-format">[D].[M].[Y,4]</entry>
   <entry key="datetime-format">[D].[M].[Y,4] [H]:[m]:[s]</entry>
   <entry key="amount-format">###.##0,00</entry>
