--- a/src/xsl/l10n/en.xml
+++ b/src/xsl/l10n/en.xml
@@ -230,6 +230,7 @@
   <entry key="laufzettelHistorie">Processing history</entry>
   <entry key="anlagen">Attachments</entry>
   <entry key="anlagenListe">Documents justifying the invoice</entry>
+  <entry key="artikelklassifizierung">Item classification</entry>
   <entry key="date-format">[Y,4]-[M,2]-[D,2]</entry>
   <entry key="datetime-format">[Y,4]-[M,2]-[D,2] [H]:[m]:[s]</entry>
   <entry key="amount-format">###,##0.00</entry>
