--- a/src/xsl/l10n/de.xml
+++ b/src/xsl/l10n/de.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <properties>
   <entry key="xr:Buyer_reference" id="BT-10">Käuferreferenz</entry>
   <entry key="xr:Buyer_name" id="BT-44">Name</entry>
@@ -37,7 +37,7 @@
   <!-- Be aware that these are for the whole invoice -->
   <entry key="xr:Invoicing_period_start_date" id="BT-73">Von</entry>
   <entry key="xr:Invoicing_period_end_date" id="BT-74">Bis</entry>
-  <entry key="xr:Preceding_Invoice_reference" id="BT-25">Rechnungsnummer</entry> 
+  <entry key="xr:Preceding_Invoice_reference" id="BT-25">Rechnungsnummer</entry>
   <entry key="xr:Preceding_Invoice_issue_date" id="BT-26">Rechnungsdatum</entry>
   <entry key="xr:Sum_of_Invoice_line_net_amount" id="BT-106">Summe aller Positionen</entry>
   <entry key="xr:Sum_of_allowances_on_document_level" id="BT-107">Summe Nachlässe</entry>
@@ -55,19 +55,16 @@
   <entry key="xr:VAT_category_tax_amount" id="BT-117">Umsatzsteuerbetrag</entry>
   <entry key="xr:VAT_exemption_reason_text" id="BT-120">Befreiungsgrund</entry>
   <entry key="xr:VAT_exemption_reason_code" id="BT-121">Kennung für den Befreiungsgrund</entry>
-  <!-- Nachlaesse -->
-  <entry key="xr:Document_level_allowance_VAT_category_code" id="BT-95">Umsatzsteuerkategorie des
-    Nachlasses</entry>
+  <!-- Allowances -->
+  <entry key="xr:Document_level_allowance_VAT_category_code" id="BT-95">Umsatzsteuerkategorie des Nachlasses</entry>
   <entry key="xr:Document_level_allowance_base_amount" id="BT-93">Grundbetrag</entry>
   <entry key="xr:Document_level_allowance_percentage" id="BT-94">Prozentsatz</entry>
   <entry key="xr:Document_level_allowance_amount" id="BT-92">Nachlass</entry>
-  <entry key="xr:Document_level_allowance_VAT_rate" id="BT-96">Umsatzsteuersatz des
-    Nachlasses</entry>
+  <entry key="xr:Document_level_allowance_VAT_rate" id="BT-96">Umsatzsteuersatz des Nachlasses</entry>
   <entry key="xr:Document_level_allowance_reason" id="BT-97">Grund für den Nachlass</entry>
   <entry key="xr:Document_level_allowance_reason_code" id="BT-98">Kennung für den Nachlassgrund</entry>
-  <!-- Zuschlaege -->
-  <entry key="xr:Document_level_charge_VAT_category_code" id="BT-102">Umsatzsteuerkategorie des
-    Zuschlages</entry>
+  <!-- Charges -->
+  <entry key="xr:Document_level_charge_VAT_category_code" id="BT-102">Umsatzsteuerkategorie des Zuschlages</entry>
   <entry key="xr:Document_level_charge_base_amount" id="BT-100">Grundbetrag</entry>
   <entry key="xr:Document_level_charge_percentage" id="BT-101">Prozentsatz</entry>
   <entry key="xr:Document_level_charge_amount" id="BT-99">Zuschlag</entry>
@@ -85,7 +82,7 @@
   <entry key="xr:Mandate_reference_identifier" id="BT-89">Mandatsreferenznr.</entry>
   <entry key="xr:Debited_account_identifier" id="BT-91">IBAN</entry>
   <entry key="xr:Bank_assigned_creditor_identifier" id="BT-90">Gläubiger-ID</entry>
-  <!-- BG-17 Credit Transfer-->
+  <!-- BG-17 Credit Transfer -->
   <entry key="xr:Payment_account_name" id="BT-85">Kontoinhaber</entry>
   <entry key="xr:Payment_account_identifier" id="BT-84">IBAN</entry>
   <entry key="xr:Payment_service_provider_identifier" id="BT-86">BIC</entry>
@@ -136,6 +133,7 @@
   <entry key="xr:Tender_or_lot_reference" id="BT-17">Vergabenummer</entry>
   <entry key="xr:Receiving_advice_reference" id="BT-15">Kennung der Empfangsbestätigung</entry>
   <entry key="xr:Despatch_advice_reference" id="BT-16">Kennung der Versandanzeige</entry>
+  <entry key="xr:Business_process_type" id="BT-23">Prozesskennung</entry>
   <entry key="xr:Business_process_type_identifier" id="BT-23">Prozesskennung</entry>
   <entry key="xr:Specification_identifier" id="BT-24">Spezifikationskennung</entry>
   <entry key="xr:Invoiced_object_identifier" id="BT-18">Objektkennung</entry>
@@ -180,7 +178,7 @@
   <entry key="xr:Item_Sellers_identifier" id="BT-155">Artikelnummer</entry>
   <entry key="xr:Item_Buyers_identifier" id="BT-156">Artikelkennung des Käufers</entry>
   <entry key="xr:Item_standard_identifier" id="BT-157">Artikelkennung</entry>
-  <entry key="xr:Item_standard_identifier/@scheme_identifier" class="BT-157_scheme">Schema der Artikelkennung</entry>
+  <entry key="xr:Item_standard_identifier/@scheme_identifier" id="BT-157_scheme">Schema der Artikelkennung</entry>
   <entry key="xr:Item_classification_identifier" id="BT-158">Code der Artikelklassifizierung</entry>
   <entry key="xr:Item_classification_identifier/@scheme_identifier" id="BT-158_scheme">Kennung zur Bildung des Schemas</entry>
   <entry key="xr:Item_classification_identifier/@scheme_version_identifier" id="BT-158_scheme_version">Version zur Bildung des Schemas</entry>
@@ -238,9 +236,7 @@
   <entry key="amount-format">###.##0,00</entry>
   <entry key="percentage-format">##0,00</entry>
   <entry key="at-least-two-format">###.##0,#################</entry>
-  
   <entry key="sum-of-third-party-payment-amounts">Summe Fremdforderungen</entry>
-
   <entry key="no-script">Inhalte auf dieser Seite sind ohne JavaScript nur eingeschränkt darstellbar.</entry>
   <entry key="_disclaimer">Wir übernehmen keine Haftung für die Richtigkeit der Daten.</entry>
   <entry key="_invoice-note-group">Bemerkungen zur Rechnung</entry>
